// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPreBootstrap correctly initializes custom options 1`] = `
Object {
  "_pathPrefix": "",
  "_plugin": "gatsby-plugin-postbuild",
  "_public": "/virtual/project/public",
  "_root": "/virtual/project",
  "allowSymbols": true,
  "enabled": true,
  "ignoreFiles": Object {
    "css": Array [
      "foo.css",
    ],
    "js": Array [],
    "pages": Array [],
    "webpack": Array [
      "app",
      "polyfill",
    ],
  },
  "purgecss": Object {
    "fontFace": false,
    "keyframes": false,
    "rejected": true,
    "variables": false,
  },
  "report": false,
  "reportConsole": true,
}
`;

exports[`onPreBootstrap correctly initializes default options 1`] = `
Object {
  "_pathPrefix": "",
  "_plugin": "gatsby-plugin-postbuild",
  "_public": "/virtual/project/public",
  "_root": "/virtual/project",
  "allowSymbols": false,
  "enabled": true,
  "ignoreFiles": Object {
    "css": Array [],
    "js": Array [],
    "pages": Array [],
    "webpack": Array [
      "app",
      "polyfill",
    ],
  },
  "purgecss": Object {
    "fontFace": false,
    "keyframes": false,
    "rejected": true,
    "variables": false,
  },
  "report": true,
  "reportConsole": true,
}
`;
